--- a/spec/cassettes/v2/company_customer_call_destroy.yml
+++ b/spec/cassettes/v2/company_customer_call_destroy.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: delete
-    uri: http://localhost:3000/v2/companies/127/customer_calls/2.json
+    uri: http://localhost:3000/v2/companies/127/company_customer_calls/2.json
     body:
       encoding: US-ASCII
       string: ''
@@ -41,7 +41,7 @@ http_interactions:
       - thin 1.5.1 codename Straight Razor
     body:
       encoding: UTF-8
-      string: '{"customer_call":{"id":2,"company_id":127,"contact_id":81968,"customer_call_credit_id":null,"admin_user_id":null,"status":"requested","attempts":0,"notes":null,"last_call_date":null,"next_call_date":null,"completed_at":null,"created_at":"2015-10-23T14:43:33Z","updated_at":"2015-10-23T14:43:33Z"}}'
+      string: '{"company_customer_call":{"id":2,"company_id":127,"contact_id":81968,"customer_call_credit_id":null,"admin_user_id":null,"status":"requested","attempts":0,"notes":null,"last_call_date":null,"next_call_date":null,"completed_at":null,"created_at":"2015-10-23T14:43:33Z","updated_at":"2015-10-23T14:43:33Z"}}'
     http_version: 
   recorded_at: Thu, 17 Dec 2015 13:55:36 GMT
 recorded_with: VCR 3.0.0
