--- a/spec/cassettes/v2/companies/10102/customer_suggestion_unhappy.yml
+++ b/spec/cassettes/v2/companies/10102/customer_suggestion_unhappy.yml
@@ -2,10 +2,10 @@
 http_interactions:
 - request:
     method: post
-    uri: http://localhost:3000/v2/companies/10102/customer_suggestions.json
+    uri: http://localhost:3000/v2/companies/10102/customer_suggestions/unhappy-feedback.json
     body:
       encoding: UTF-8
-      string: '{"customer_suggestion":{"contact_id":58410735,"suggestion_answer":"yes","suggestion_topic_id":30998}}'
+      string: '{"customer_suggestion":{"contact_id":58405755,"suggestion_answer":"yes"},"email_key":"8O4huVI19KZ_MvPOQTegMw"}'
     headers:
       User-Agent:
       - Faraday v0.9.2
@@ -31,21 +31,21 @@ http_interactions:
       vary:
       - Origin
       etag:
-      - W/"c4f35af616594ebb2998b2b09b90aac6"
+      - W/"828126446c1313424e7e2bbfa27ed6f2"
       cache-control:
       - max-age=0, private, must-revalidate
       x-request-id:
-      - 435c70bc-e82d-4f24-bb47-d66729bf77c9
+      - b527cc0e-b4eb-4a56-ae3f-ab5d54fb9fb4
       x-runtime:
-      - '0.058311'
+      - '0.071677'
       connection:
       - close
       server:
       - thin 1.5.1 codename Straight Razor
     body:
       encoding: UTF-8
-      string: '{"customer_suggestion":{"id":2169735,"company_id":10102,"contact_id":58410735,"suggestion_topic_id":30998,"suggestion_answer":"yes","created_at":"2017-07-19
-        23:08:27 UTC","updated_at":"2017-07-19 23:08:27 UTC"}}'
+      string: '{"customer_suggestion":{"id":2169736,"company_id":10102,"contact_id":58405755,"suggestion_topic_id":148653,"suggestion_answer":"yes","created_at":"2017-07-19
+        23:10:31 UTC","updated_at":"2017-07-19 23:10:31 UTC"}}'
     http_version: 
-  recorded_at: Wed, 19 Jul 2017 23:08:28 GMT
+  recorded_at: Wed, 19 Jul 2017 23:10:31 GMT
 recorded_with: VCR 3.0.0
