--- a/spec/cassettes/v2/company_communication_campaigns_results.yml
+++ b/spec/cassettes/v2/company_communication_campaigns_results.yml
@@ -8,7 +8,7 @@ http_interactions:
       string: ''
     headers:
       User-Agent:
-      - Faraday v0.13.1
+      - Faraday v0.9.2
       Accept:
       - application/json
       Authorization:
@@ -29,20 +29,20 @@ http_interactions:
       vary:
       - Origin
       etag:
-      - W/"9d5720f6bb8ad78a0f829146a3621f3d"
+      - W/"2d85c3c40768b16d4958791bde631444"
       cache-control:
       - max-age=0, private, must-revalidate
       x-request-id:
-      - 21518a03-db63-4561-b2eb-0c003efb3f3b
+      - e9a73192-d641-46ca-bc9f-1b80604938ad
       x-runtime:
-      - '0.410488'
+      - '0.375639'
       connection:
       - close
       server:
       - thin 1.5.1 codename Straight Razor
     body:
       encoding: UTF-8
-      string: '{"communication_campaigns":[{"overall_roi":70,"postcards_sent":15838,"emails_sent":0,"responses":1654,"response_rate":"11.29","completed":{"postcards_sent":14647,"cost":"14647.0","revenue":"1069975.38","roi":"5343.44","iteration_count":73,"transactions_referred_count":2218,"responses":1654,"emails_sent":0,"response_rate":"11.2924148"},"in_progress":{"postcards_sent":1191,"cost":"1191.0","revenue":"40924.71","roi":"206.98","iteration_count":6,"transactions_referred_count":76,"responses":57,"emails_sent":0,"response_rate":"4.7858942"}}]}'
+      string: '{"company_communication_campaign_results":{"overall_roi":68,"postcards_sent":16438,"emails_sent":0,"responses":1692,"response_rate":"11.25","completed":{"company_id":5565,"postcards_sent":15045,"cost":"15045.0","revenue":"1102208.64","roi":"5506.58","iteration_count":75,"transactions_referred_count":2270,"responses":1692,"emails_sent":0,"response_rate":"11.2463"},"in_progress":{"company_id":5565,"postcards_sent":1393,"cost":"1393.0","revenue":"16611.55","roi":"83.95","iteration_count":7,"transactions_referred_count":42,"responses":35,"emails_sent":0,"response_rate":"2.5126"}}}'
     http_version: 
-  recorded_at: Tue, 21 Nov 2017 03:31:12 GMT
-recorded_with: VCR 3.0.3
+  recorded_at: Thu, 23 Nov 2017 08:10:42 GMT
+recorded_with: VCR 3.0.0
