--- a/spec/cassettes/v2/campaign_result_summary.yml
+++ b/spec/cassettes/v2/campaign_result_summary.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: http://localhost:3000/v2/campaign-results/summary/5565.json
+    uri: http://localhost:3000/v2/campaign-results/summary.json?company_id=5565
     body:
       encoding: US-ASCII
       string: ''
@@ -29,20 +29,20 @@ http_interactions:
       vary:
       - Origin
       etag:
-      - W/"ce2d475801af9cf88fb53ab5c154361d"
+      - W/"eae8ffa720710277cb13e1fe65511099"
       cache-control:
       - max-age=0, private, must-revalidate
       x-request-id:
-      - 3e701def-0756-4d8c-b175-e82b655d5bd7
+      - d760b9b4-58f2-4b0f-8edf-6d0f22e853b2
       x-runtime:
-      - '0.582209'
+      - '0.581532'
       connection:
       - close
       server:
       - thin 1.5.1 codename Straight Razor
     body:
       encoding: UTF-8
-      string: '{"company_id":5565,"cost_per_postcard":0,"overall_roi":68,"postcards_sent":16438,"emails_sent":0,"responses":1692,"response_rate":"11.25","completed":{"company_id":5565,"postcards_sent":15045,"cost":"15045.0","revenue":"1102208.64","roi":"5506.58","iteration_count":75,"transactions_referred_count":2270,"responses":1692,"emails_sent":0,"response_rate":"11.2463"},"in_progress":{"company_id":5565,"postcards_sent":1393,"cost":"1393.0","revenue":"16611.55","roi":"83.95","iteration_count":7,"transactions_referred_count":42,"responses":35,"emails_sent":0,"response_rate":"2.5126"}}'
+      string: '{"company_id":5565,"cost_per_postcard":"1.0","overall_roi":68,"postcards_sent":16438,"emails_sent":0,"responses":1692,"response_rate":"11.25","completed":{"company_id":5565,"postcards_sent":15045,"cost":"15045.0","revenue":"1102208.64","roi":"5506.58","iteration_count":75,"transactions_referred_count":2270,"responses":1692,"emails_sent":0,"response_rate":"11.2463"},"in_progress":{"company_id":5565,"postcards_sent":1393,"cost":"1393.0","revenue":"16611.55","roi":"83.95","iteration_count":7,"transactions_referred_count":42,"responses":35,"emails_sent":0,"response_rate":"2.5126"}}'
     http_version: 
-  recorded_at: Wed, 29 Nov 2017 08:08:29 GMT
+  recorded_at: Thu, 30 Nov 2017 02:37:35 GMT
 recorded_with: VCR 3.0.0
