--- a/spec/cassettes/v2/reports/company/campaign_analysis_report.yml
+++ b/spec/cassettes/v2/reports/company/campaign_analysis_report.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: http://localhost:3000/v2/reports/campaign-analysis.json?company_id=239
+    uri: http://localhost:3000/v2/reports/companies/239/campaign-analysis.json
     body:
       encoding: US-ASCII
       string: ''
@@ -29,20 +29,20 @@ http_interactions:
       vary:
       - Origin
       etag:
-      - W/"9f6d7ad82179a7b52aa59eb4805ad757"
+      - W/"f8e59b99880a0cb9527c89a905fbb378"
       cache-control:
       - max-age=0, private, must-revalidate
       x-request-id:
-      - a9e51591-289c-4d04-9af5-4f251237d3bb
+      - 52e01676-593a-4f3a-bb32-d0c54281e18a
       x-runtime:
-      - '0.059075'
+      - '0.038196'
       connection:
       - close
       server:
       - thin 1.5.1 codename Straight Razor
     body:
       encoding: UTF-8
-      string: '{"reports":{"url":"https://s3.amazonaws.com/customerlobby-scotty-development/239/campaign-analysis/CLP_Reports_20181015124109PM.csv"}}'
+      string: '{"company":{"url":"https://s3.amazonaws.com/customerlobby-scotty-development/239/campaign-analysis/CLP_Reports_20181015124109PM.csv"}}'
     http_version: 
-  recorded_at: Tue, 16 Oct 2018 14:57:17 GMT
+  recorded_at: Mon, 22 Oct 2018 11:15:16 GMT
 recorded_with: VCR 3.0.0
